# partibus

./: Makefile  README.md  pyproject.toml  requirements.txt
src/partibus/: __init__.py  __main__.py  http_server.py  lemmatize.py
tests/: test_lemmatize.py
